@@ -55,6 +55,7 @@ static void compatInit(Compatibility_t &c)
         }
     }
 
+    c.fix_restored_block_move = true;
     c.fix_player_slope_speed = true;
     // 1.3.4
     c.enable_last_warp_hub_resume = true;
@@ -112,6 +113,7 @@ static void compatInit(Compatibility_t &c)
 
     if(s_compatLevel >= COMPAT_SMBX2) // Make sure that bugs were same as on SMBX2 Beta 4 on this moment
     {
+        c.fix_restored_block_move = false;
         c.fix_player_slope_speed = false;
         // 1.3.4
         c.enable_last_warp_hub_resume = false;
@@ -275,6 +277,7 @@ static void loadCompatIni(Compatibility_t &c, const std::string &fileName)
     compat.beginGroup("compatibility");
     if(s_compatLevel < COMPAT_SMBX2) // Ignore options are still not been fixed at the SMBX2
     {
+        compat.read("fix-restored-block-move", c.fix_restored_block_move, c.fix_restored_block_move);
         compat.read("fix-player-slope-speed", c.fix_player_slope_speed, c.fix_player_slope_speed);
         // 1.3.4
         compat.read("enable-last-warp-hub-resume", c.enable_last_warp_hub_resume, c.enable_last_warp_hub_resume);
