@@ -763,10 +763,34 @@ struct Block_t
     int standingOnPlayerY = 0;
 //    noProjClipping As Boolean
     bool noProjClipping = false;
-// EXTRA: Indicate the fact that block was resized by a hit
-    bool wasShrinkResized = false;
 //    IsReally As Integer 'the NPC that is this block
     int IsReally = 0;
+
+// EXTRA: Indicate the fact that block was resized by a hit
+#if 1
+    inline void setShrinkResized() {}
+    inline bool getShrinkResized()
+    {
+        // Because the initial block width is stored as an integer, the only way the width could be 31.9 is if it was shrink-resized from 32.
+        // The block location width isn't set to a non-integer anywhere else in the game, so this is safe.
+        // This is a heuristic and has a small CPU tradeoff, but it saves memory.
+        // If it fails in some case, we can switch to the below implementation, or we could use this implementation only when LOW_MEM is set.
+        return Location.Width == 31.9;
+    }
+#else
+private:
+    bool _wasShrinkResized = false;
+public:
+    inline void setShrinkResized()
+    {
+        _wasShrinkResized = true;
+    }
+    inline bool getShrinkResized()
+    {
+        return wasShrinkResized;
+    }
+#endif
+
 //End Type
 };
 
